Revision history for Perl module Alien::SDL

1.424 Wed Feb 02 2011
     - adding '--disable-sdltest' to SDL_image's configure for darwin #222 [FROGGS]
     - added patch for SDL_image/libpng-flags for netbsd #232 [FROGGS]

1.423 Tue Jan 25 2011
     - now '--with-sdl-config' is the same as '--with-sdl-config=sdl-config' [kmx]

1.422_1 Tue Jan 25 2011
     - added Build.PL option --with-sdl-config=... [madsen,kmx]

1.422 Wed Jan 19 2011
     - the same as latest dev release

1.421_3  Sun Dec 19 2010
     - added paths /usr/pkg/include and /usr/pkg/lib for dragonfly [FROGGS]
     - patch for SDL's configure script, -Wl,-rpath,LIBDIR for openbsd [FROGGS]

1.421_2  Sun Oct 31 2010
     - updated check_header() to use gcc on cygwin [FROGGS]

1.421_1  Sun Oct 31 2010
     - building libjpeg-v8b[FROGGS]
     - setting cc to gcc on cygwin [FROGGS]

1.421  Sat Oct 30 2010
     - using LD_LIBRARY_PATH on openbsd [FROGGS]

1.420  Fri Oct 29 2010
     - bugtracker url changed, shows Alien::SDL only [FROGGS]
     - disabling mmx for SDL_gfx for alpha-linux [FROGGS]

1.419  Sat Oct 23 2010
     - test for X11/Xlib.h on darwin, disable X if missing [FROGGS]
     - extracting sources and running configure again by default when running Build twice [FROGGS]
     - fixed bug: passing '--without-x' only to package SDL [FROGGS]
     - added sub check_prereqs_tools, checking for pkg-config to build SDL_Pango [FROGGS]
     - printing config.log for packages that failed to run configure [FROGGS]

1.418_2  Mon Oct 18 2010
     - patch for ldconfig on BSD [FROGGS]
     - experimental test for X11/Xlib.h on darwin, disable X if missing [FROGGS]
     - disabling any warning for file_find() for perl-5.6.2 [FROGGS]

1.418_1  Fri Oct 15 2010
     - fixed 'invalid version'-error for libtiff [FROGGS]
     - experimental test for X11/Xlib.h on darwin [FROGGS]
     - experimental disabling any warning for file_find() for perl-5.6.2 [FROGGS]

1.418  Thu Oct 14 2010